PR bin/51145 PR bin/48489 More fixes to the shell parser to prevent empty simple commands (where empty means no significant text at all) - as discussed on tech-userlevel this still allows { } (which can be useful in function definitions, not really anywhere else though) except in posix mode.  ( ) now generates a syntax error, as should any other place where commands are required but nothing is present.  (nb, redirections, var assignments, even var expansions that expand to nothing, are all OK, and avoid the error - just comments, or whits space, are not.)    This is (aside from allowing { } at all) all in accordance with the posix spec.